# orchestration-start-here

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  ORIGIN-DOCUMENT-INVENTORY.md  README.md  governance-rules.json  open_issues.json  pyproject.toml  tsconfig.json
.history-analysis/: claude_plans_week.csv  natural-language-patterns.md  open-close-patterns.md  report.md  sequences.md  session-boundaries.md  unique-prompt-timeline.md  warp_ai_week.csv  warp_shell_week.csv
contrib_engine/: cli.py  orchestrator.py
docs/: 30-day-growth-plan.md  agent-run-logging.md  archive-policy.md  autonomous-systems-design.md  ci-templates.md  codeowners-strategy.md  domus-agent-infrastructure.md  event-catalog.yaml  github-custom-properties.md  handoff-maddie-spiral-path-2026-04-01.md  limen-088-monthly-organ-audit-triage-2026-06-01.md  mail-triage-2026-04-01.md  mail-triage-2026-04-02.md  operator-prompts-raw-423.txt  practice-distillation-skill.md  reconciliation-72h.md  release-checklist.md  repo-templates.md  semantic-code-graph.md  sop-cross-boundary-reference-mapping.md  sop-inflated-claims-audit.md  sop-protocol-precedent-constitutional.md  sop-registry-caching-chain-analysis.md  tier-based-testing-matrix.md  tmux-swarm-layout.md  transcript-ingestion-protocol.md  work-vacuums-S50-2026-04-01.md  workspace-write-policy.md
precedent_engine/: stores.py
scripts/: enforce-ci-mandate.py  fetch-registry.sh  generate-seed-from-registry.py  handle-dispatch-promotion.py  orchestrator-dry-run.py  project-progress.py  reconcile-72h.py  validate-all-seeds.py  validate-deps.py  (+1 more)
(+42 files in other folders)
